fix to product
